@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/ccsm/Attic/ccsm-0.6.0.ebuild,v 1.2 2007/10/24 17:45:21 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/ccsm/Attic/ccsm-0.6.0.ebuild,v 1.3 2007/10/25 14:17:43 tester Exp $
 
 DESCRIPTION="Compizconfig Settings Manager"
 HOMEPAGE="http://compiz-fusion.org"
@@ -8,7 +8,7 @@ SRC_URI="http://releases.compiz-fusion.org/${PV}/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~ppc ~x86"
+KEYWORDS="~amd64 ~ppc ~x86"
 IUSE=""
 
 DEPEND="dev-python/compizconfig-python
