@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/ccsm
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/ccsm/ChangeLog,v 1.2 2007/10/24 17:45:21 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/ccsm/ChangeLog,v 1.3 2007/10/25 14:17:43 tester Exp $
+
+  25 Oct 2007; Olivier Crête <tester@gentoo.org> ccsm-0.6.0.ebuild:
+  Marked ~amd64
 
   24 Oct 2007; Luca Barbato <lu_zero@gentoo.org> ccsm-0.6.0.ebuild:
   Marked ~ppc
